--- a/app/assets/stylesheets/pages/_features.scss
+++ b/app/assets/stylesheets/pages/_features.scss
@@ -62,6 +62,14 @@
   padding: 2rem 1.2rem;
 }
 
+.st-stars {
+  width: auto;
+  position: relative;
+}
+
+.yellow-icon {
+  color: #fc0;
+}
 .st-author-thumb {
   width: 80px;
   height: 80px;
