--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,15 +1,14 @@
-
-<%= simple_form_for(@review) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :content %>
-    <%= f.input :rating %>
-    <%= f.association :user %>
+<div class="container mb-5">
+  <div class="row">
+    <div class="col-xs-4">
+      <%= simple_form_for @review do |f| %>
+        <%= f.error_notification %>
+        <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+        <%= f.input :author %>
+        <%= f.input :content %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Valora la teva experiencia", input_html: {data: {controller: "star-rating"}} %>
+        <%= f.submit "Enviar comentari", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+</div>
