--- a/app/views/realestates/index.html.erb
+++ b/app/views/realestates/index.html.erb
@@ -174,10 +174,10 @@
                         <!-- End Single Search -->
                         <!-- Single Search -->
                         <div class="single_search_boxed">
-                          <% if (params.values & @all_salesprices).length > 0 %>
+                          <% if params[:min].present? || params[:max].present? %>
                             <div class="widget-boxed-header">
                               <h4>
-                                <a href="#salesprice" data-bs-toggle="collapse" aria-expanded="false" role="button">Preu </a>
+                                <a href="#salesprice" data-bs-toggle="collapse show" aria-expanded="false" role="button">Preu </a>
                               </h4>
                             </div>
                             <div class="widget-boxed-body collapse show" id="salesprice" data-parent="#salesprice">
@@ -194,14 +194,13 @@
                                 <div class="single_filter_card">
                                   <div class="card-body pt-0">
                                     <div class="row">
-                                      <%# TEST %>
                                       <div class="col-lg-6 col-md-6 col-sm-12 p-2 elio">
                                         <div class="form-group mb-2">
                                           <div class="input-with-icon">
                                             <select name="min" id="minprice" class="form-control">
                                               <option value="">&nbsp;</option>
                                               <% @salesprices_array.each do |sp| %>
-                                                <option value="<%= sp %>"><%= sp %></option>
+                                                <option value="<%= sp %>" <%= "selected" if params[:min] == sp.to_s %> ><%= sp %></option>
                                               <% end %>
                                             </select>
                                           </div>
@@ -213,13 +212,12 @@
                                             <select name="max" id="maxprice" class="form-control">
                                               <option value="">&nbsp;</option>
                                               <% @salesprices_array.each do |sp| %>
-                                                <option value="<%= sp %>"><%= sp %></option>
+                                                <option value="<%= sp %>" <%= "selected" if params[:max] == sp.to_s %> ><%= sp %></option>
                                               <% end %>
                                             </select>
                                           </div>
                                         </div>
                                       </div>
-                                      <%# TEST %>
                                     </div>
                                   </div>
                                 </div>
@@ -233,10 +231,6 @@
                             <button type="submit" class="btn btn btn-theme-light-2 rounded full-width">Cercar</button>
                           </div>
                           <!-- End Button Filter -->
-                          <%= Realestate.last.salesprice - params[:min].to_i %>
-                          <%= params[:min].class %>
-                          <%= Realestate.last.salesprice %>
-                          <%= params[:min].present? & params[:max].present? %>
                         </div>
                       <% end %>
                     </div>
@@ -315,7 +309,7 @@
                           <div class="_mp_filter_last">
                             <div class="filter_list_item">
                               <div class="selected_item_wrap">
-                                <% params.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
+                                <% params.compact_blank.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
                                   <div class="slt_single_item">
                                     <%= link_to request.params.except(key.to_sym), class: "remove_pills" do %>
                                       <span class="pills_tex"><%= key if key == "min" || key == "max" %> <%= value %></span>
