--- a/app/views/realestates/index.html.erb
+++ b/app/views/realestates/index.html.erb
@@ -225,130 +225,175 @@
                             </div>
                           </div>
                           <!-- End Single Search -->
-                          <!-- End All Search Fields -->
-                          <!-- Button Filter -->
-                          <div class="form-group filter_button">
-                            <button type="submit" class="btn btn btn-theme-light-2 rounded full-width">Cercar</button>
-                          </div>
-                          <!-- End Button Filter -->
+                          <!-- Single Search Bedrooms -->
+                          <div class="single_search_boxed">
+                            <% if params[:hab].present? %>
+                              <div class="widget-boxed-header">
+                                <h4>
+                                  <a href="#hab" data-bs-toggle="collapse" aria-expanded="false" role="button">Mín. Nº d'habitacions</a>
+                                </h4>
+                              </div>
+                              <div class="widget-boxed-body collapse show" id="hab" data-parent="#hab">
+                              <%  else %>
+                                <div class="widget-boxed-header">
+                                  <h4>
+                                    <a href="#hab" data-bs-toggle="collapse" aria-expanded="false" role="button" class="collapsed">Mín. Nº d'habitacions</a>
+                                  </h4>
+                                </div>
+                                <div class="widget-boxed-body collapse" id="hab" data-parent="#hab">
+                                <% end %>
+                                <div class="side-list no-border">
+                                  <!-- Single Filter Card -->
+                                  <div class="single_filter_card">
+                                    <div class="card-body pt-0">
+                                      <div class="inner_widget_link">
+                                        <ul class="no-ul-list filter-list">
+                                          <% @all_bedrooms.each_with_index do |hab, index|%>
+                                            <li>
+                                              <% if params[:hab] == hab.to_s %>
+                                                <input id="hab<%= index + 1 %>" class="radio-custom" name="hab" type="radio" value="<%= hab %>" checked>
+                                                <label for="hab<%= index + 1 %>" class="radio-custom-label"><%= hab %> hab. o més</label>
+                                              <% elsif %>
+                                                <input id="hab<%= index + 1 %>" class="radio-custom" name="hab" type="radio" value="<%= hab %>">
+                                                <label for="hab<%= index + 1 %>" class="radio-custom-label"><%= hab %> hab. o més</label>
+                                              <% end %>
+                                            </li>
+                                          <% end %>
+                                        </ul>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <!-- End Single Search -->
+                            <!-- End All Search Fields -->
+                            <!-- Button Filter -->
+                            <div class="form-group filter_button">
+                              <button type="submit" class="btn btn btn-theme-light-2 rounded full-width">Cercar</button>
+                            </div>
+                            <!-- End Button Filter -->
+                          <% end %>
                         </div>
-                      <% end %>
+                      </div>
                     </div>
+                    <!-- End Find New Property -->
                   </div>
-                  <!-- End Find New Property -->
                 </div>
-              </div>
-              <!-- End Property Left Sidebar -->
-              <!-- Right Side -->
-              <div class="col-lg-8 col-md-12 list-layout">
-                <%# render "realestates", realestates: @realestates %>
-                <%# turbo_frame_tag "realestates", data: {turbo_action: "advance" } do %>
-                  <div class="row justify-content-center">
-                    <div class="col-lg-12 col-md-12">
-                      <div class="item-shorting-box">
-                        <div class="item-shorting clearfix">
-                          <div class="left-column pull-left">
-                            <h4 class="m-0">
-                              <%# If there is only one result %>
-                              <% if params[:page].nil? && @all_realestates.count == 0  %>
-                                No s'han trobat immobles d'aquestes caracteristiques.
-                              <% elsif params[:page].nil? && @realestates.count == 1  %>
-                                <%= @realestates.count %> immoble
-                                <%# If it's the first page %>
-                              <% elsif params[:page].nil? || params[:page] == 1 %>
-                                1 - <%= @realestates.count %> de <%= @all_realestates.count %> immobles
-                                <%# If params[:page] present and @realestates number == @pagy.items %>
-                              <% elsif params[:page].present? && @realestates.count == @pagy.items %>
-                                <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= params[:page].to_i * @pagy.items %> de <%= @all_realestates.count %> immobles
-                                <%# if params[:page] present and @realestates number < @pagy.items %>
-                              <% elsif params[:page].present? && @realestates.count < @pagy.items %>
-                                <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= @all_realestates.count %> de <%= @all_realestates.count %> immobles
-                              <% end %>
-                            </h4>
+                <!-- End Property Left Sidebar -->
+                <!-- Right Side -->
+                <div class="col-lg-8 col-md-12 list-layout">
+                  <%# render "realestates", realestates: @realestates %>
+                  <%# turbo_frame_tag "realestates", data: {turbo_action: "advance" } do %>
+                    <div class="row justify-content-center">
+                      <div class="col-lg-12 col-md-12">
+                        <div class="item-shorting-box">
+                          <div class="item-shorting clearfix">
+                            <div class="left-column pull-left">
+                              <h4 class="m-0">
+                                <%# If there is only one result %>
+                                <% if params[:page].nil? && @all_realestates.count == 0  %>
+                                  No s'han trobat immobles d'aquestes caracteristiques.
+                                <% elsif params[:page].nil? && @realestates.count == 1  %>
+                                  <%= @realestates.count %> immoble
+                                  <%# If it's the first page %>
+                                <% elsif params[:page].nil? || params[:page] == 1 %>
+                                  1 - <%= @realestates.count %> de <%= @all_realestates.count %> immobles
+                                  <%# If params[:page] present and @realestates number == @pagy.items %>
+                                <% elsif params[:page].present? && @realestates.count == @pagy.items %>
+                                  <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= params[:page].to_i * @pagy.items %> de <%= @all_realestates.count %> immobles
+                                  <%# if params[:page] present and @realestates number < @pagy.items %>
+                                <% elsif params[:page].present? && @realestates.count < @pagy.items %>
+                                  <%= (params[:page].to_i * @pagy.items) - (@pagy.items - 1) %> - <%= @all_realestates.count %> de <%= @all_realestates.count %> immobles
+                                <% end %>
+                              </h4>
+                            </div>
                           </div>
-                        </div>
-                        <div class="item-shorting-box-right">
-                          <ul class="shorting-list">
-                            <li>
-                              <%= link_to index_map_realestates_path, target: "_blank" do %>
-                                <i class="fas fa-map-marked"></i>
-                              <% end %>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-----------------------------Filter----------------------------->
-                  <div class="row">
-                    <div class="col-lg-12 col-md-12">
-                      <div class="sty_1523">
-                        <div class="_mp_filter mb-3">
-                          <div>
-                            <% if params[:direction] == 'asc' %>
-                              <%= link_to request.params.merge(column: :salesprice, direction: 'desc'), class: "map_filter min" do %>
-                                <i class="fa fa-caret-down mr-2"></i>Ordenar per preu
-                              <% end %>
-                            <% elsif params[:direction] == 'desc' %>
-                              <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
-                                <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
-                              <% end %>
-                            <% else %>
-                              <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
-                                <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
-                              <% end %>
-                            <% end %>
-                            <a href="#" class="map_filter min" data-bs-toggle="modal" data-bs-target="#filter"><i class="fa fa-sliders-h mr-2"></i>Short Filter</a>
+                          <div class="item-shorting-box-right">
+                            <ul class="shorting-list">
+                              <li>
+                                <%= link_to index_map_realestates_path, target: "_blank" do %>
+                                  <i class="fas fa-map-marked"></i>
+                                <% end %>
+                              </li>
+                            </ul>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-12 col-md-12">
-                      <div class="sty_1523">
-                        <div class="_mp_filter center mb-3">
-                          <div class="_mp_filter_last">
-                            <div class="filter_list_item">
-                              <div class="selected_item_wrap">
-                                <% params.compact_blank.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
-                                  <div class="slt_single_item">
-                                    <%= link_to request.params.except(key.to_sym), class: "remove_pills" do %>
-                                      <span class="pills_tex"><%= key if key == "min" || key == "max" %> <%= value %></span>
-                                      <span class="remove_cross"></span>
-                                    <% end %>
-                                  </div>
+                    <!-----------------------------Filter----------------------------->
+                    <div class="row">
+                      <div class="col-lg-12 col-md-12">
+                        <div class="sty_1523">
+                          <div class="_mp_filter mb-3">
+                            <div>
+                              <% if params[:direction] == 'asc' %>
+                                <%= link_to request.params.merge(column: :salesprice, direction: 'desc'), class: "map_filter min" do %>
+                                  <i class="fa fa-caret-down mr-2"></i>Ordenar per preu
                                 <% end %>
-                                <% if params.except(:action, :controller, :locale, :column, :direction, :page).values.length > 1 %>
-                                  <div class="slt_single_item">
-                                    <%= link_to realestates_path, class: "clear_pills" do %>
-                                      <span class="pills_clears">Treure tots els filtres</span>
-                                    <% end %>
-                                  </div>
+                              <% elsif params[:direction] == 'desc' %>
+                                <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
+                                  <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
                                 <% end %>
+                              <% else %>
+                                <%= link_to request.params.merge(column: :salesprice, direction: 'asc'), class: "map_filter min" do %>
+                                  <i class="fa fa-caret-up mr-2"></i>Ordenar per preu
+                                <% end %>
+                              <% end %>
+                              <!--Short Filter not applying for now----------------------
+                        <a href="#" class="map_filter min" data-bs-toggle="modal" data-bs-target="#filter"><i class="fa fa-sliders-h mr-2"></i>Short Filter</a>
+                        -----------------------Short Filter not applying for now-->
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-lg-12 col-md-12">
+                        <div class="sty_1523">
+                          <div class="_mp_filter center mb-3">
+                            <div class="_mp_filter_last">
+                              <div class="filter_list_item">
+                                <div class="selected_item_wrap">
+                                  <% params.compact_blank.except(:action, :controller, :locale, :column, :direction, :page).each do |key, value| %>
+                                    <div class="slt_single_item">
+                                      <%= link_to request.params.except(key.to_sym), class: "remove_pills" do %>
+                                        <span class="pills_tex"><%= key if key == "min" || key == "max" %> <%= value %> <%= "#{key}. o més" if key == "hab" %> </span>
+                                        <span class="remove_cross"></span>
+                                      <% end %>
+                                    </div>
+                                  <% end %>
+                                  <% if params.except(:action, :controller, :locale, :column, :direction, :page).values.length > 1 %>
+                                    <div class="slt_single_item">
+                                      <%= link_to realestates_path, class: "clear_pills" do %>
+                                        <span class="pills_clears">Treure tots els filtres</span>
+                                      <% end %>
+                                    </div>
+                                  <% end %>
+                                </div>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
+                    <!-----------------------------End Filter----------------------------->
+                    <!-- Tots els immobles -->
+                    <div class="row">
+                      <% @realestates.each do |realestate| %>
+                        <%= render realestate %>
+                      <% end %>
+                    </div>
+                    <!-- End Tots els immobles -->
+                    <!-- Pagination -->
+                    <div class="d-flex justify-content-center">
+                      <%== pagy_bootstrap_nav(@pagy) %>
+                    </div>
+                    <!-- End Pagination -->
+                    <%# end %>
                   </div>
-                  <!-----------------------------End Filter----------------------------->
-                  <!-- Tots els immobles -->
-                  <div class="row">
-                    <% @realestates.each do |realestate| %>
-                      <%= render realestate %>
-                    <% end %>
-                  </div>
-                  <!-- End Tots els immobles -->
-                  <!-- Pagination -->
-                  <div class="d-flex justify-content-center">
-                    <%== pagy_bootstrap_nav(@pagy) %>
-                  </div>
-                  <!-- End Pagination -->
-                  <%# end %>
+                  <!-- End Right Side -->
                 </div>
-                <!-- End Right Side -->
               </div>
-            </div>
-          </section>
-          <!-- ============================ End Properties ================================== -->
-          <%= render partial: "shared/filter_modal" %>
+            </section>
+            <!-- ============================ End Properties ================================== -->
+            <%# render partial: "shared/filter_modal" %>
+            <%= @realestate_bedrooms %> <br>
